--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-:root {
-	--animation: .3s 0s cubic-bezier(.55,0,.1,1);
-}
-
 swipeable-drawer {
 	position: fixed;
 	top: 0;
@@ -10,7 +6,7 @@ swipeable-drawer {
 	width: calc(100vw - 56px);
 	background-color: white;
 	z-index: 1100;
-	transition: transform var(--animation);
+	transition: transform .3s 0s cubic-bezier(.55,0,.1,1);
 	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
 				0  6px 30px 5px rgba(0, 0, 0, 0.12),
 				0  8px 10px -5px rgba(0, 0, 0, 0.4);
