--- a/src/style.css
+++ b/src/style.css
@@ -6,12 +6,15 @@ swipeable-drawer {
 	width: calc(100vw - 56px);
 	background-color: white;
 	z-index: 1100;
+	transition: -webkit-transform .3s 0s cubic-bezier(.55,0,.1,1);
 	transition: transform .3s 0s cubic-bezier(.55,0,.1,1);
+	transition: transform .3s 0s cubic-bezier(.55,0,.1,1), -webkit-transform .3s 0s cubic-bezier(.55,0,.1,1);
 	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
 				0  6px 30px 5px rgba(0, 0, 0, 0.12),
 				0  8px 10px -5px rgba(0, 0, 0, 0.4);
 }
 
 swipeable-drawer.open {
-	transform: translate(calc(100vw - 56px + 30px), 0);
+	-webkit-transform: translate(calc(100vw - 56px + 30px), 0);
+	        transform: translate(calc(100vw - 56px + 30px), 0);
 }
